--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">android_integration_client_kotlin</string>
     <string name="cliente">Cliente</string>
+    <string name="app_title">Content Provider Client</string>
 </resources>
